<resources>
    <string name="app_name">Quiz</string>

    <string name="description">This is a short quiz, which aims to check \nyour ability not only to learn to code well, \nbut to keep smiling all the way through \nthe Android Basic course by Udacity.</string>
    <string name="rules">Answer questions carefully, \nget 1 point for each correct answer. \nLet\'s start from the trickiest one! \nGood luck!</string>

    <string name="question">What is your name?</string>
    <string name="question1">1. Name the most popular smartphone operating system:</string>
    <string name="hint">Enter your answer here</string>
    <string name="question1_answer">android</string>

    <string name="description_of_bar">Questions answered</string>

    <string name="firstQuestionAnswered1">"Beautiful name and amazing start! \nAnd now answer the first quiz question. "</string>

    <string name="toastNoName">You did not enter your name!</string>
    <string name="toastNoAnswer">%1$s, your answer is empty! \nPlease, check at least one option.</string>
    <string name="toastCorrectAnswer">%1$s, that\'s awesome! \nYou get plus 1 point.\nClick check button to proceed.</string>
    <string name="toastWrongAnswer">%1$s, oh, you missed that one! \nYou get 0 points.\nClick check button to proceed.</string>
    <string name="toastRestart">Do you really want to restart quiz? \nPlease, push back one more time.</string>

    <string name="question2">2.	Who welcomes students to Udacity and Google Developer Challenge Scholarship in introduction video? \n(please, check all correct answers)</string>
    <string name="question2_answer1_correct">Chaitra Ramanathan, program manager</string>
    <string name="question2_answer2">Sebastian Thrun, Udacity founder</string>
    <string name="question2_answer3_correct">Nick Blumenthal, program manager</string>
    <string name="question2_answer4">Sundar Pichai, Google CEO</string>

    <string name="question3">3.	Who was working on the course Android basics for a while and started Welcome to the Course video? \n(please, check all correct answers)</string>
    <string name="question3_answer1">Chaitra Ramanathan, program manager</string>
    <string name="question3_answer2_correct">Katherine Kuan, developer advocate, Google</string>
    <string name="question3_answer3">Nick Blumenthal, program manager</string>
    <string name="question3_answer4_correct">Kunal Chawla, instructor, Udacity</string>

    <string name="question4">4.	Who is the secret lady in the background?</string>
    <string name="question4_answer1">Just a kitchen lady</string>
    <string name="question4_answer2">Kunal’s admirer secretly following him</string>
    <string name="question4_answer3_correct">Lyla Fujiwara, course developer/Udacity barista</string>

    <string name="question5">5.	What is basically the first step towards becoming Android developer?</string>
    <string name="question5_answer1">Installing Android Studio</string>
    <string name="question5_answer2_correct">Making a “Hello world” app</string>
    <string name="question5_answer3">Making a “Goodbye world” app</string>

    <string name="question6">6.	What was Kunal learning and have to struggle?</string>
    <string name="question6_answer1_correct">Learn to play the piano</string>
    <string name="question6_answer2">Learn how to play chess</string>
    <string name="question6_answer3">Learn Japanese language</string>

    <string name="question7">7.	What was Katherine learning and have to struggle?</string>
    <string name="question7_answer1">Learn to play violin</string>
    <string name="question7_answer2_correct">Learn Chinese language</string>
    <string name="question7_answer3">Learn how to dance tango</string>

    <string name="question8">8.	Who/What is Chloe?</string>
    <string name="question8_answer1">Katherine’s friend</string>
    <string name="question8_answer2">Katherine’s second name</string>
    <string name="question8_answer3_correct">Kunal’s office plant</string>

    <string name="question9">9.	Who was this really special quest? </string>
    <string name="question9_answer1">Kunal’s manager</string>
    <string name="question9_answer2">Katherine’s sister</string>
    <string name="question9_answer3_correct">Alice Young, technical lead, Google</string>

    <string name="question10">10.	Guess what time it is?</string>
    <string name="question10_answer1_correct">Time to end this quiz</string>
    <string name="question10_answer2">Time for more cake</string>
    <string name="question10_answer3">Time to start learning</string>

    <string name="results1">"%1$s, you scored %2$d point"</string>
    <string name="results2">""%1$s, you scored %2$d points"</string>

    <string name="lyrics9to10">You\'re just too marvelous,\nToo marvelous for words\nLike \"\glorious\", \"glamorous\"\nAnd that old standby \"amorous\".</string>
    <string name="lyrics7to8">When you\'re smilin\', when you\'re smilin\'\nThe whole world smiles with you\nBut when you\'re cryin\', you bring on the rain\nSo stop your sighin\', be happy again!</string>
    <string name="lyrics5to6">Regrets, I\'ve had a few\nBut then again, too few to mention\nI did what I had to do\nAnd saw it through without exemption.</string>
    <string name="lyrics3to4">That\'s life that\'s what people say\nYou\'re riding high in April\nShot down in May\nBut I know I\'m gonna change that tune\nWhen I\'m back on top, back on top in June.</string>
    <string name="lyrics1to2">We\'re drinkin\', my friend,\nTo the end of a brief episode\nMake it one for my baby\nAnd one more for the road.</string>

    <string name="welcome_picture">Welcome picture</string>
    <string name="android_picture">Smartphone, Photo by Rodion Kutsaev on Unsplash.</string>
    <string name="question_picture">Question picture</string>
    <string name="answer_picture">Answer picture</string>
    <string name="arrow_picture">Pulsing arrow pointing down</string>
    <string name="present_picture">Present picture</string>

    <string name="sinatra">Frank Sinatra picture</string>

    <string name="open_present">Open your present</string>
    <string name="share">Share this app with your friends</string>

    <string name="letter_subject">You have to try this app</string>
    <string name="letter_text">Hello, look I found a nice quiz app, you can download it here: https://drive.google.com/folderview?id=1E4StGQCzEgnRXHsryzt4zeupK6gBvBpw</string>
    <string name="share_points">Share your results</string>
    <string name="letter_results_subject">My results in Greta\'s Quiz</string>
    <string name="letter_results_text1">"Hello, \nCan You imagine, I collected %1$d point."</string>
    <string name="letter_results_text2">"Hello, \nCan You imagine, I collected %1$d points."</string>

    <string name="video_failure">Sorry, initialization failure</string>
    <string name="send">Send Email</string>
</resources>
