<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.android.quiz.MainActivity">

    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/picture_question2"
                android:src="@drawable/question2"
                style="@style/question_picture"
                android:contentDescription="@string/question_picture"/>

            <ImageView
                android:id="@+id/arrow"
                android:contentDescription="@string/arrow_picture"
                style="@style/arrow_picture" />

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cw_question2"
                card_view:cardBackgroundColor="@color/cardview_light_background"
                card_view:cardElevation="@dimen/elevation"
                style="@style/cardview_checkbox_radiobutton">

                <LinearLayout
                    android:id="@+id/checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/picture_question2"
                    android:layout_margin="@dimen/margin_standard"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cb_question"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/halfmargin_standard"
                        android:text="@string/question2"
                        android:textAppearance="@style/TextAppearance"
                        android:textStyle="italic" />

                    <CheckBox
                        android:id="@+id/cb_answer_1"
                        android:layout_marginLeft="@dimen/halfmargin_standard"
                        android:layout_marginStart="@dimen/halfmargin_standard"
                        android:text="@string/question2_answer1_correct"
                        style="@style/checkbox_portrait" />

                    <CheckBox
                        android:id="@+id/cb_answer_2"
                        android:layout_margin="@dimen/halfmargin_standard"
                        android:text="@string/question2_answer2"
                        style="@style/checkbox_portrait" />

                    <CheckBox
                        android:id="@+id/cb_answer_3"
                        android:layout_marginLeft="@dimen/halfmargin_standard"
                        android:layout_marginStart="@dimen/halfmargin_standard"
                        android:text="@string/question2_answer3_correct"
                        style="@style/checkbox_portrait" />

                    <CheckBox
                        android:id="@+id/cb_answer_4"
                        android:layout_margin="@dimen/halfmargin_standard"
                        android:text="@string/question2_answer4"
                        style="@style/checkbox_portrait" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:layout_below="@id/cw_question2" />

        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/navigation"
        app:elevation="@dimen/elevation"
        app:fabSize="normal"
        app:rippleColor="@color/colorHeading"
        app:srcCompat="@drawable/checksign"
        style="@style/navigation_button" />

    <TextView
        android:id="@+id/descriptionBar"
        android:layout_above="@id/determinateBar"
        android:text="@string/description_of_bar"
        style="@style/progressbar_description" />

    <ProgressBar
        android:id="@+id/determinateBar"
        style="@style/progressbar"
        android:layout_alignParentBottom="true" />
</RelativeLayout>