<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.example.android.quiz.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <ImageView
        android:id="@+id/picture_question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/question1"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:padding="@dimen/padding_little"
        android:contentDescription="@string/welcome_picture"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/grand_hotel"
            android:text=""
            android:textSize="@dimen/text_size_heading"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@id/picture_question1"
            android:layout_marginBottom="30dp"
            android:textColor="@color/colorHeading" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/picture_question1"
            android:layout_margin="@dimen/margin_standard"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/et_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/description"
            android:layout_marginLeft="@dimen/margin_standard"
            android:layout_marginRight="@dimen/margin_standard"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_standard"
            android:textAppearance="@style/TextAppearance"
            android:text="@string/rules"
            android:gravity="center"/>

        <TextView
            android:id="@+id/et_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/et_instructions"
            android:layout_marginLeft="@dimen/margin_standard"
            android:layout_marginStart="@dimen/margin_standard"
            android:text="@string/question1"
            android:textAppearance="@style/TextAppearance"
            android:textStyle="italic"/>

        <EditText
            android:id="@+id/et_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/et_question"
            android:layout_marginLeft="@dimen/margin_standard"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginRight="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:textAppearance="@style/TextAppearance"
            android:hint="@string/hint"
            android:textStyle="italic"
            />

        <com.makeramen.roundedimageview.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/navigation"
            android:layout_height="80dp"
            android:layout_width="80dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/et_answer"
            android:layout_margin="@dimen/margin_standard"
            app:riv_corner_radius="10dip"
            app:riv_oval="true"
            android:src="@drawable/button" />

    </RelativeLayout>
</ScrollView>